# Autoit-WebView2-UDF

./: .gitignore  INSTALL.md  README.md
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md  04_support.md
Examples/: Example_01_SetupWizard.au3  Example_02_SimpleBrowser.au3  Example_03_ModernDashboard.au3  Example_04_AutoItJavaScriptBridge.au3  Example_Advanced.au3  Example_BasicNavigation.au3  Example_ExecuteScript.au3  Example_HTMLString.au3  Example_NativeWebView2.au3  Example_NativeWebView2_Basic.au3  Example_RuntimeCheck.au3
Extensions/WV2_Animation/: QUICKREF.md  README.md
Extensions/WV2_Animation/Examples/: WV2_Animation_Advanced.au3  WV2_Animation_Demo.au3
Extensions/WV2_Animation/Include/: WV2_Animation.au3
Extensions/WV2_Chart/: API_REFERENCE.md  README.md  STRUCTURE.txt  SUMMARY.md
Extensions/WV2_Chart/Include/: WV2_Chart.au3
Include/: WebView2.au3  WebView2_COM.au3  WebView2_Callbacks.au3  WebView2_Native.au3  WebView2_OrdoControl.au3  WebView2_Runtime.au3  WebView2_Setup.au3
ReactFramework/: README.md
ReactFramework/Examples/: ReactFramework_Showcase.au3  StandortManager.au3  showcase.js
ReactFramework/Include/: WV2React_Core.au3  WV2React_Grid.au3  WV2React_Map.au3  WV2React_UI.au3
SQLiteManager/: HANDBUCH.md  SQLiteManager.au3
SQLiteManager/ui/: scripts.js  styles.css  template.html
docs/: WebView2_UDF_Manual.html  index.html
docs/assets/: style.css
docs/wiki/: API-Reference.md  Examples.md  FAQ.md  Home.md  Installation.md  JavaScript-Communication.md  Quick-Start.md  SQLiteManager.md  Troubleshooting.md  WV2React-Framework.md  WV2_Animation.md  WV2_Chart.md  _Sidebar.md
src/: CMakeLists.txt  WebView2Helper.c  WebView2Helper.def  build_helper.bat  compile_helper.bat
(+35 files in other folders)
